kubernetes/3. multi-container app/k8s/client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: client
spec:
  replicas: 3
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
        - name: client-container
          image: coderchirag2002/multi-app-client
          ports:
            - containerPort: 3000
