kubernetes/3. multi-container app/k8s/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: client
spec:
  type: ClusterIP
  selector:
    component: client
  ports:
    - port: 80
      targetPort: 3000
